test/e2e/networkdevice-cluster-consistency/01-topology.yaml
apiVersion: inventory.miloapis.com/v1alpha1
kind: Region
metadata:
  name: ndc-region-eu
spec:
  displayName: EU Central
  coordinates:
    latitude: 50.1109
    longitude: 8.6821
---
apiVersion: inventory.miloapis.com/v1alpha1
kind: Site
metadata:
  name: ndc-site-a
spec:
  displayName: Site A
  regionRef:
    name: ndc-region-eu
  type: Datacenter
---
apiVersion: inventory.miloapis.com/v1alpha1
kind: Site
metadata:
  name: ndc-site-b
spec:
  displayName: Site B
  regionRef:
    name: ndc-region-eu
  type: Datacenter
---
apiVersion: inventory.miloapis.com/v1alpha1
kind: Cluster
metadata:
  name: ndc-cluster-a
spec:
  displayName: cluster-a
  controlPlaneSiteRef:
    name: ndc-site-a
  role: Compute
  provider: sidero-omni
