test/e2e/networkdevice-cluster-consistency/test-data/mismatched-site.yaml
apiVersion: inventory.miloapis.com/v1alpha1
kind: NetworkDevice
metadata:
  name: ndc-device-cross-site
spec:
  clusterRef:
    name: ndc-cluster-a
  siteRef:
    name: ndc-site-b
  role: Leaf
  managementAddress: 10.200.1.10
